fixed spacing error on smaller devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -456,7 +456,7 @@ ul li{
 	}
 	.my-description{
 		margin:0 auto;
-		width:400px;
+		width:300px;
 		text-align:left;
 	}
 	.my-description-sentences{
